--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hola chau pagina web ahhh moment</title>
+    <title>pagina web ahhh moment</title>
     <link rel="stylesheet" href="../css/estilos.css"> 
 </head>
 
 <body>
     <h1>Hola es mi primera pagina web jaja jiji jojo</h1>
-    <h2>Aguante limbus company</h2>
-    <p>migeul borja / para me voy a hacer otro pancho</p>
+
+    <h2 id="limbus"> aguante el limbus company</h2>
+
+    <p>migeul borja / para me voy a hacer otro panchito</p>
 
     <img width="500" src="img/limbus.jpg" alt="limbus company broder">
 
